// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router for character GET /characters return 200 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "7",
    "content-type": "application/json; charset=utf-8",
    "date": "Mon, 05 Apr 2021 18:24:31 GMT",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
    "url": "http://127.0.0.1:52138/",
  },
  "status": 200,
  "text": "[1,2,3]",
}
`;

exports[`Router for character GET /characters/:id return 200 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "42",
    "content-type": "application/json; charset=utf-8",
    "date": "Mon, 05 Apr 2021 18:24:31 GMT",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
    "url": "http://127.0.0.1:52134/123",
  },
  "status": 200,
  "text": "{\\"id\\":1,\\"name\\":\\"a\\",\\"description\\":\\"fake 1\\"}",
}
`;

exports[`Router for character GET /characters/:id return 404 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "2",
    "content-type": "text/plain; charset=utf-8",
    "date": "Mon, 05 Apr 2021 18:24:31 GMT",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
    "url": "http://127.0.0.1:52136/123",
  },
  "status": 404,
  "text": "{}",
}
`;
